# fizix

./: .codebook.toml  Cargo.toml  README.md  ROADMAP.md  clippy.toml  justfile
.github/workflows/: ci.yml  release.yml
doc/: macro_syntax.md
examples/: basic_physics.rs  vector.rs
src/: dim.rs  lib.rs  macros.rs  ops.rs  scale.rs  units.rs  vector.rs
tests/: custom_value.rs  integration.rs  smoke_test.rs
tests/compile_fail/: bad_dim_type.rs  bad_dim_type.stderr  const_wrong_position.rs  const_wrong_position.stderr  dimension_mismatch.rs  dimension_mismatch.stderr  duplicate_name.rs  duplicate_name.stderr  private_alias.rs  private_alias.stderr  too_many_dims.rs  too_many_dims.stderr  without_const.rs  without_const.stderr
