[package]
name = "siunit"
version = "0.1.0"
edition = "2024"
authors = ["Nan Huang <teddyhuangnan@gmail.com>"]
description = "Compile-time checked SI units via const generics"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TeddyHuang-00/siunit"
keywords = ["units", "dimensions", "si", "const-generics", "type-safe"]
categories = ["science", "no-std", "mathematics"]

[package.metadata.msrv]
nightly = false

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = []

[dependencies]
paste = "1.0"
typenum = "1.20"

[dev-dependencies]
trybuild = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[lints.rust]
unsafe_code = "forbid"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
